# oracle_min_example

./: .test.txt  Cargo.toml
src/: constants.rs  main.rs  utils.rs
tests/: oracle.rs
