[package]
name = "oracle_min_example"
version = "0.1.0"
edition = "2021"

[features]
default = ["rand_chacha"]

[dependencies]
miden-crypto = { version = "0.12", default-features = false }
miden-lib = { version = "0.6", default-features = false }
miden-objects = { version = "0.6", default-features = false }
miden-tx = { version = "0.6", features = ["testing"] }
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false, optional = true }
